# arctic-xbeach

./: .gitignore  README.md  download_data.py  main.py  pyproject.toml  requirements.txt
arctic_xbeach/: bathymetry.py  miscellaneous.py  model.py
examples/: run_multiple_runs_parallel.bat  run_single_run_analytical.py  run_single_run_barter_island.py
examples/analytical/01_dirichlet_warming/: bed.dep  config.yaml
examples/analytical/02_dirichlet_cooling/: config.yaml  ne_layer.txt  x.grd
examples/analytical/03_neumann_constant/: config.yaml
examples/case_studies/barter_island/: bed.dep  config.yaml  x.grd
examples/case_studies/barter_island/database/: era5.csv  storms.csv
